<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/play_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".MemorizeActivity" >

    <LinearLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/return_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="left"
            android:minHeight="4dip"
            android:minWidth="4dip"
            android:onClick="return_btn_click"
            android:padding="5dp"
            android:text="@string/return_list"
            android:textColor="#08C"
            android:textSize="18sp" />

        <Button
            android:id="@+id/next_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center"
            android:minHeight="4dip"
            android:minWidth="4dip"
            android:padding="5dp"
            android:text="@string/next_question"
            android:textColor="#08C"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/today_rest_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/quiz_rest"
            android:textColor="#999"
            android:textSize="18sp"
            android:typeface="monospace" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/sec_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" >

            <TextView
                android:id="@+id/item_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:text="@string/item_type"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#333"
                android:textSize="14sp"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/question_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/quiz_type"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#333"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/view_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/view_count"
                android:textColor="#999"
                android:textSize="14sp"
                android:typeface="monospace" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/tv_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/question"
                android:textColor="#333333"
                android:textSize="14sp"
                android:typeface="monospace" />

            <EditText
                android:id="@+id/user_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tv_question"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/tv_question"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:cursorVisible="true"
                android:ems="10"
                android:hint="@string/hint_answer"
                android:textColor="#ff1493"
                android:textCursorDrawable="@null"
                android:textSize="14sp"
                android:typeface="monospace" >

                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/choice_btn_1"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tv_question"
                android:layout_alignRight="@+id/tv_question"
                android:layout_below="@+id/tv_question"
                android:layout_marginTop="20dp"
                android:background="#2ECC71"
                android:fadingEdge="none"
                android:text="@string/choice_btn_1"
                android:textColor="#fff"
                android:typeface="monospace"
                android:visibility="invisible" />

            <Button
                android:id="@+id/choice_btn_2"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tv_question"
                android:layout_alignRight="@+id/tv_question"
                android:layout_below="@+id/tv_question"
                android:layout_marginTop="80dp"
                android:background="#2ECC71"
                android:fadingEdge="none"
                android:text="@string/choice_btn_2"
                android:textColor="#fff"
                android:typeface="monospace"
                android:visibility="invisible" />

            <Button
                android:id="@+id/choice_btn_3"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tv_question"
                android:layout_alignRight="@+id/tv_question"
                android:layout_below="@+id/tv_question"
                android:layout_marginTop="140dp"
                android:background="#2ECC71"
                android:fadingEdge="none"
                android:text="@string/choice_btn_3"
                android:textColor="#fff"
                android:typeface="monospace"
                android:visibility="invisible" />

            <Button
                android:id="@+id/choice_btn_4"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tv_question"
                android:layout_alignRight="@+id/tv_question"
                android:layout_below="@+id/tv_question"
                android:layout_marginTop="200dp"
                android:background="#2ECC71"
                android:fadingEdge="none"
                android:text="@string/choice_btn_4"
                android:textColor="#fff"
                android:typeface="monospace"
                android:visibility="invisible" />

            <Button
                android:id="@+id/choice_btn_5"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tv_question"
                android:layout_alignRight="@+id/tv_question"
                android:layout_below="@+id/tv_question"
                android:layout_marginTop="260dp"
                android:background="#2ECC71"
                android:fadingEdge="none"
                android:text="@string/choice_btn_4"
                android:textColor="#fff"
                android:typeface="monospace"
                android:visibility="invisible" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/explain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/explain"
            android:textColor="#bd362f"
            android:textSize="12sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/correct_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/hidden_rec_id"
            android:visibility="invisible" />
    </RelativeLayout>

</LinearLayout>