<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:minHeight="4dip"
    android:minWidth="4dip"
    tools:context="net.tomtalk.memorize.MemorizeActivity" >
    
    <LinearLayout
        android:id="@+id/add_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_alignParentTop="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/add_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@null"
            android:minHeight="4dip"
            android:minWidth="4dip"
            android:padding="10dp"
            android:text="@string/btn_add"
            android:textColor="#08C" />
        
        <Button
            android:id="@+id/blank_span"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:minHeight="4dip"
            android:minWidth="4dip"
            android:padding="10dp"
            android:text="@string/empty_string"
            android:textColor="#08C"  />

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:minHeight="4dip"
            android:minWidth="4dip"
            android:padding="10dp"
            android:text="@string/return_btn"
            android:textColor="#08C" />

  	</LinearLayout>
  	
  	<Spinner
  	    android:id="@+id/spinner1"
  	    android:layout_width="wrap_content"
  	    android:layout_height="wrap_content"
  	    android:layout_below="@+id/add_cancel"
  	    android:layout_marginBottom="0dp"
  	    android:layout_marginLeft="20dp"
  	    android:layout_marginRight="20dp"
  	    android:layout_marginTop="0dp"
  	    android:padding="0dp"
  	    android:textSize="16sp" />
    
    <EditText
        android:id="@+id/text_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:background="@null"
        android:cursorVisible="true"
        android:ems="10"
        android:hint="@string/hint_add"
        android:paddingLeft="0dp"
        android:textColor="#333333"
        android:textCursorDrawable="@null"
        android:textSize="16sp"
        android:typeface="monospace" >

        <requestFocus />
    </EditText>
    
    <EditText
        android:id="@+id/text_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_question"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:background="@null"
        android:cursorVisible="true"
        android:ems="10"
        android:hint="@string/hint_answer"
        android:paddingLeft="0dp"
        android:textColor="#333333"
        android:textCursorDrawable="@null"
        android:textSize="13sp"
        android:typeface="monospace" >

        <requestFocus />
    </EditText>

    
  	
    <TextView
        android:id="@+id/input_rec_id"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/hidden_rec_id" />

    

</RelativeLayout>
